--- a/ToDo App/package.json
+++ b/ToDo App/package.json
@@ -14,6 +14,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "sort-by": "^1.2.0"
